--- a/SimpleDBCookieExample/Properties/launchSettings.json
+++ b/SimpleDBCookieExample/Properties/launchSettings.json
@@ -23,6 +23,15 @@
       },
       "applicationUrl": "https://localhost:5001;http://localhost:5000"
     },
+    "SimpleDBCookieExampleNoSSL": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "applicationUrl": "http://localhost:5000",
+      "useSSL":  false
+    },
     "Docker": {
       "commandName": "Docker",
       "launchBrowser": true,
